[package]
name = "id_effect_resilience"
version = "0.4.0"
edition = "2024"
description = "Resilience patterns — circuit breaker, rate limiter, bulkhead, hedged requests — for id_effect"
license = "CC-BY-SA-4.0"
repository = "https://github.com/Industrial/id_effect"
readme = "README.md"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[lib]
name = "id_effect_resilience"

[dependencies]
id_effect = { path = "../id_effect", version = "0.4.0" }
tokio = { version = "1.50.0", features = ["sync", "time"] }

[dev-dependencies]
rstest = "0.26"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
