[package]
name = "id_effect_sql"
version = "0.1.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "Driver-agnostic SQL client traits for id_effect — @effect/sql-style boundaries"
repository = "https://github.com/Industrial/id_effect"
readme = "README.md"
keywords = ["effect", "async", "sql", "database", "postgres"]
categories = ["asynchronous", "database"]

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
id_effect = { path = "../id_effect", version = "0.3.0" }

[dev-dependencies]
axum = { version = "0.8" }
id_effect_axum = { path = "../id_effect_axum" }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

id_effect_tokio = { path = "../id_effect_tokio" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "net"] }
rstest = "0.26"

[[example]]
name = "010_axum_sql"
path = "examples/010_axum_sql.rs"
