[package]
name = "id_effect_sql_pg"
version = "0.1.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "PostgreSQL driver for id_effect_sql — deadpool-postgres + tokio-postgres"
repository = "https://github.com/Industrial/id_effect"
readme = "README.md"
keywords = ["effect", "async", "sql", "postgres", "database"]
categories = ["asynchronous", "database"]

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
deadpool-postgres = "0.14"
id_effect = { path = "../id_effect", version = "3.0.0" }
id_effect_sql = { path = "../id_effect_sql", version = "0.1.0" }
tokio = { version = "1.50.0", features = ["rt", "sync"] }
tokio-postgres = { version = "0.7", default-features = false, features = [
  "with-uuid-1",
] }

[dev-dependencies]
id_effect_tokio = { path = "../id_effect_tokio", version = "3.0.0" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
