[package]
name = "id_effect_sql_pg"
version = "0.4.0"
edition = "2024"
license = "CC-BY-SA-4.0"
description = "PostgreSQL driver for id_effect_sql — sqlx pool and PgSqlClient"
repository = "https://github.com/Industrial/id_effect"
readme = "README.md"
keywords = ["effect", "async", "sql", "postgres", "database"]
categories = ["asynchronous", "database"]

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }

[dependencies]
id_effect = { path = "../id_effect", version = "0.4.0" }
id_effect_sql = { path = "../id_effect_sql", version = "0.4.0" }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "uuid",
] }
tokio = { version = "1.50.0", features = ["rt", "sync"] }

[dev-dependencies]
id_effect_tokio = { path = "../id_effect_tokio" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
