[package]
name = "id_effect_tokio"
version = "0.2.0"
edition = "2024"
description = "Tokio runtime adapter and re-exports for the workspace `effect` crate"
license = "CC-BY-SA-4.0"
repository = "https://github.com/Industrial/id_effect"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage)',
  'cfg(feature, values("mock"))',
] }

[lib]
name = "id_effect_tokio"

[dependencies]
id_effect = { path = "../id_effect", version = "0.2.0" }
rayon = "1.12"
tokio = { version = "1.50.0", features = [
  "rt",
  "rt-multi-thread",
  "time",
  "sync",
] }

[dev-dependencies]
pollster = "0.4"
